syntax = "proto3";

package monopoly;

import "prisel/annotations.proto";

message AnnounceEndTurnPayload {
  option (prisel.for_action) = {
    type : "announce_end_turn"
    packet_type : DEFAULT
  };
  string current_player = 1;
  string next_player = 2;
}