syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "google/protobuf/descriptor.proto";
import "prisel/system_action_type.proto";
import "prisel/packet_type.proto";

message SystemActionSpec {
  SystemActionType type = 1;
  PacketType packet_type = 2;
}

message ActionSpec {
  string type = 1;
  PacketType packet_type = 2;
}

extend google.protobuf.MessageOptions {
  SystemActionSpec for_system_action = 50002;
  ActionSpec for_action = 50003;
}